@@ -15,6 +15,7 @@
 	* Improvements to Install Tool:
 		- Cleanup in t3lib_install
 		- Fixed bug #7589: FULLTEXT keys are not processed correctly
+		- Detect differences in table engine and table character set during DB compare
 	* Fix DB field types for static_tsconfig_help
 
 2008-03-03  Ingo Renner  <ingo@typo3.org>
